@@ -1800,6 +1800,11 @@ _SLICE1 = _SLICE2 = _SLICE_1_ARG
 def _SLICE3(oparg, operand, codeSource, code) :
     _popStackRef(code, operand, 3)
 
+def _STORE_SLICE2(oparg, operand, codeSource, code) :
+    # FIXME: can we check here if we're storing to something that supports
+    # slice assignment ?
+    _popStackRef(code, operand, 3)
+
 def _DELETE_SLICE3(oparg, operand, codeSource, code) :
     # FIXME: can we check here if we're deleting from something that supports
     # slice deletion ?
@@ -1998,7 +2003,6 @@ _DELETE_SLICE1 = _unimplemented
 _DELETE_SLICE2 = _unimplemented
 _STORE_SLICE0 = _unimplemented
 _STORE_SLICE1 = _unimplemented
-_STORE_SLICE2 = _unimplemented
 _STORE_SLICE3 = _unimplemented
 # FIXME: probably pop argument number of items ?
 _DUP_TOPX = _unimplemented
